fix snap effect and add better light/dark mode ui palette.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,10 @@
 
 @layer components {
     .heroButton {
-        @apply px-6 py-2 rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:text-[#84FF57]/40
+        @apply px-6 py-2 rounded-full uppercase text-xs tracking-widest dark:text-gray-500 text-gray-600 transition-all dark:hover:text-[#84FF57]/40 hover:text-[#2E7D32]/80
     }
 
     .contactInput {
-        @apply outline-none bg-slate-400/10 rounded-sm border-b px-5 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#84FF57]/40 focus:text-[#84FF57]/40 hover:border-[#84FF57]/40
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-5 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all dark:focus:border-[#84FF57]/40 dark:focus:text-[#84FF57]/40 dark:hover:border-[#84FF57]/40 focus:border-[#2E7D32]/60 focus:text-[#2E7D32]/80 hover:border-[#2E7D32]/60
     }
-
 }
